	PR target/77526 	* combine.c (rest_of_handle_combine): If any edges have been purged, 	free dominators if available.

* gcc.target/i386/pr77526.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240174 138bc75d-0d04-0410-961f-82ee72b054a4